--- a/app/views/home/sections/_intro2020.html.erb
+++ b/app/views/home/sections/_intro2020.html.erb
@@ -5,6 +5,9 @@
         <h2 class="section-heading">
           OUR 2020 SEASON
         </h2>
+        <h5>
+          january 10—18, 2020, at Washington Street Art Center in Somerville, MA
+        </h5>
         <hr class="primary">
       </div>
     </div>
@@ -12,21 +15,48 @@
 
   <div class="container">
     <div class="row text-center">
-      <div class="col-md-10 col-md-offset-1">
-         <p class="">
-          the fourth season of the co-incidence festival will take place from january 10—18, 2020, at Washington Street Art Center in Somerville, MA. as with the past years, the overarching goal of the festival is to bring together experimental composers/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. the festival is directed by experimental composer/performers aaron foster breilyn and luke martin and will feature Resident Artist: John Holloway.
+      <div class="col-md-8 col-md-offset-2">
+        <p>
+          We began thinking about this year’s festival with a gut question, an intuitive uneasiness: “So, what?”
+          Followed by an implied: “So, what - now?”
         </p>
         <p>
-          this festival is a conscious instance of composition as social practice. we hope that this act and ethos becomes even further developed during the course of our work together. ultimately, we hope that this becomes a truly special week of collaboration, discussion, performance, and composition; one in which we can form lasting and caring relationships, establish practical tactics with which we can hone our daily practices and challenge structures of capital, and investigate radically alternative modes of being, thinking, and relating.
+          We are all active, serious, intense, dedicated (and angry, frustrated, impatient) - of course. We create art.
+          We write. We perform. We protest. We organize festivals, gatherings, concerts, meetings, events. But then
+          what? Things aren’t necessarily getting better; they’re hardly getting different.
         </p>
-        <br />
-        <br />
-        <br />
-        <br />
+        <p>
+          After the demonstrations/actualizations of our ideas have passed, what are the effects? What are the actual
+          results of (these) political acts? Something does occur. Often quite beautiful, wonderful things. But how are
+          we considering, critiquing, progressing-with, challenging, etc. what does happen? Is there a way that we can
+          think of consequence as something that challenges objective-driven modes of being - the logic given to us by
+          capital?
+        </p>
+        <p>
+          It is easy to point out what won’t work. We know what hasn’t worked. So what will?
+        </p>
+        <p>
+          We (aaron & luke) are interested in creating a space dedicated to the development of the creative and
+          experimental movement of the human being. We want to discuss, learn, and discover with others how we might be
+          able to think/act/compose towards/with/alongside possibilities that we can’t yet imagine - whatever the result
+          may be. If we are able to find/create these cracks in our everyday logic, these possibilities, then how can we
+          experience them more vividly? Can we condition them (ourselves perhaps) to see them more clearly, to realize
+          their potential more readily?
+        </p>
+        <p>
+          With social and political theorist John Holloway, we will explore topics relating to these questions about the
+          consequences of art, cracks (in capital), political movements, disruption, antipower, non-action, and others.
+        </p>
+        <p>
+          We invite those interested to join us in this attempt to think, act, do, critique, and be together.
+        </p>
+        <br/>
+        <br/>
         <hr class="tertiary">
         <h4><a class="" href="/application">Please apply here</a></h4>
+        <br>
+        <p><a class="" href="/faq-2020">more info can be found here</a></p>
         <hr class="tertiary">
-        </div>
       </div>
     </div>
   </div>
