--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -26,11 +26,15 @@
             </a>
           </p>
           <p>
-            Washington St. is home to 20 artists who work in a broad range of media. from sculpture to paper cutting, painting to book binding and everything in between - the collaborative houses a cornucopia of creatives from many different backgrounds. with its own photo lab, Washington St. also hosts photography members who share the darkroom and photo studio.​ additionally, Washington St. has served for many years as an experimental music venue, directed by composer/performers Michael Rosenstein, Jesse Collins, and Morgan Evans-Weiler.​
+            Washington St. is home to 20 artists who work in a broad range of media. from sculpture to paper cutting,
+            painting to book binding and everything in between - the collaborative houses a cornucopia of creatives from
+            many different backgrounds. with its own photo lab, Washington St. also hosts photography members who share
+            the darkroom and photo studio.​ additionally, Washington St. has served for many years as an experimental
+            music venue, directed by composer/performers Michael Rosenstein, Jesse Collins, and Morgan Evans-Weiler.​
           </p>
           --
           <p>
-            <a href="https://drive.google.com/drive/folders/0B_0ZEgSpOR3uaE9GWFpSU0wzNmM?usp=sharing"> 
+            <a href="https://drive.google.com/drive/folders/0B_0ZEgSpOR3uaE9GWFpSU0wzNmM?usp=sharing">
               pictures of the space.
             </a>
           </p>
@@ -58,7 +62,14 @@
             </a>
           </p>
           <p>
-            Non-Event is a Boston-based concert series devoted to the presentation of the finest in experimental, abstract, improvised, and new music from New England and around the world. founded in 2001, Non-Event has presented over 260 concerts in and around Boston in a wide variety of venues from coffee shops, galleries, and loft spaces to former movie palaces, university lecture halls, museums, night clubs, 19th-century ballrooms, a Victorian-era pumping station, and inside Boston's iconic City Hall. in addition to working with numerous venues and organizations over the past 15 years, Non-Event organizes a longstanding series of informal monthly coffee house concerts featuring local musicians and sound artists, held at Café Fixe in Brookline and made possible in part by the Brookline Commission for the Arts.
+            Non-Event is a Boston-based concert series devoted to the presentation of the finest in experimental,
+            abstract, improvised, and new music from New England and around the world. founded in 2001, Non-Event has
+            presented over 260 concerts in and around Boston in a wide variety of venues from coffee shops, galleries,
+            and loft spaces to former movie palaces, university lecture halls, museums, night clubs, 19th-century
+            ballrooms, a Victorian-era pumping station, and inside Boston's iconic City Hall. in addition to working
+            with numerous venues and organizations over the past 15 years, Non-Event organizes a longstanding series of
+            informal monthly coffee house concerts featuring local musicians and sound artists, held at Café Fixe in
+            Brookline and made possible in part by the Brookline Commission for the Arts.
           </p>
         </div>
       </div>
@@ -77,9 +88,15 @@
             </a>
           </p>
           <p>
-            John Holloway is a Professor of Sociology at the Instituto de Ciencias Sociales y Humanidades in the Benemérita Universidad Autónoma de Puebla, Mexico. He has published widely on Marxist theory, on the Zapatista movement, and on the new forms of anti-capitalist struggle. His book Change the World Without taking Power (Pluto, London, 2002, new edition 2010) has been translated into eleven languages and has stirred an international debate. His recent book, Crack Capitalism (Pluto, 2010), takes the argument further by suggesting that the only way in which we can think of revolution today is as the creation, expansion, multiplication and confluence of cracks in capitalist domination.
+            John Holloway is a Professor of Sociology at the Instituto de Ciencias Sociales y Humanidades in the
+            Benemérita Universidad Autónoma de Puebla, Mexico. He has published widely on Marxist theory, on the
+            Zapatista movement, and on the new forms of anti-capitalist struggle. His book Change the World Without
+            taking Power (Pluto, London, 2002, new edition 2010) has been translated into eleven languages and has
+            stirred an international debate. His recent book, Crack Capitalism (Pluto, 2010), takes the argument further
+            by suggesting that the only way in which we can think of revolution today is as the creation, expansion,
+            multiplication and confluence of cracks in capitalist domination.
           </p>
-        <!-- <div class="service-box">
+          <!-- <div class="service-box">
           <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
           <h4>
             Resident Artist
@@ -95,7 +112,6 @@
           <p>
             Sarah Pitan is a young American artist. she is a first-generation Nigerian-American who was born in raised in Boston. she has backgrounds in sports, dance, and visual arts, all of which indirectly inform her current artistic work. her education in piano performance and music composition at the Rivers School Conservatory and the Boston Conservatory directly inform her work. however, her current practice involves an intensive conceptual abstraction from the aforementioned disciplines, which are under attack. she refers to her work as manipulative, improvisational, accelerative, or abductive writing. in this way, Pitan experiments with concepts originating in post-Kantian ontology. along with this, concepts developed in formal logic, set theory, and minimalism influence her work. the bulk of Pitan’s work exists in writing : notes, transcriptions, and scores. her work attempts to deterritorialize the stage and reappropriate a critical method of performance. she currently resides in Brooklyn.
           </p>
-          <!--
           <p>
             From
             <a href="http://www.heimart.at/index.php/joachim-eckl.html"> 
