ref-log some nonsense

--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -6,13 +6,19 @@
           ABOUT
         </h2> -->
         <p class="text-faded">
-          <i>the co-incidence festival </i>is a gathering of experimental composer-performers hosted by Non-Event at Washington Street Gallery in Somerville, MA.
+          <i>the co-incidence festival </i>is a gathering of experimental composer-performers at Washington Street
+          Gallery in Somerville, MA.
         </p>
         <hr class="light">
         <p class="text-faded">
-          this project is based on an expanded view of what constitutes art, music, and the traditional concert. following the example of the revolutionary arts community Black Mountain College, it will bring together a group of radical artists operating in the boundary-zones of their practice to take part in a festival curated as ‘social sculpture.’ reflecting the values of experimental music, co-incidence will be allowed to grow organically, strongly influenced by the artists who attend: the directors simply provide a time, space, and loose framework. there will be encouraged but not required peer-to-peer meetings between artists in lieu of official lessons, the people attending will not be labeled as student or faculty.
+          this project is based on an expanded view of what constitutes art, music, and the traditional concert.
+          following the example of the revolutionary arts community Black Mountain College, it will bring together a
+          group of radical artists operating in the boundary-zones of their practice to take part in a festival curated
+          as ‘social sculpture.’ reflecting the values of experimental music, co-incidence will be allowed to grow
+          organically, strongly influenced by the artists who attend: the directors simply provide a time, space, and
+          loose framework.
         </p>
-        <br />
+        <br/>
         <!-- <p class="text-faded">
           The festival is tuition free. Housing and food are not provided (besides a welcome dinner, and all meals on Sunday the 29th). To offset this cost, we are giving a $400 stipend to each guest artist. We estimate housing and food costs to be between $500 and $600. Upon acceptance, we will assist as possible in finding accommodations and providing recommendation letters for grants.
         </p>
@@ -26,16 +32,17 @@
         </p> -->
 
         <p class="text-faded">
-          if you have any questions, please email us at: <a href="mailto:coincidence.festival@gmail.com">coincidence.festival@gmail.com</a>.
+          if you have any questions, please email us at:
+          <a href="mailto:coincidence.festival@gmail.com">coincidence.festival@gmail.com</a>.
         </p>
-        <br />
+        <br/>
         <p class="text-faded">
-            check out some media from our <a href="/2017-season">2017</a>,
-            <a href="/2018-season">2018</a>
-            or
-            <a href="/2019-season">2019</a> season.
+          check out some media from our <a href="/2017-season">2017</a>,
+          <a href="/2018-season">2018</a>
+          or
+          <a href="/2019-season">2019</a> season.
         </p>
-        
+
       </div>
     </div>
   </div>
