--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -21,18 +21,18 @@
             <p>
               to make a tax deductible donation, please donate with paypal
             </p>
-            <br />
-            <br />
-<!--             <p>
-              please consider making a tax
-              <br /> deductible donation
-            </p>
-            <br /> -->
+            <br/>
+            <br/>
+            <!--             <p>
+                          please consider making a tax
+                          <br /> deductible donation
+                        </p>
+                        <br /> -->
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-              <input type="hidden" name="cmd" value="_s-xclick" />
-              <input type="hidden" name="hosted_button_id" value="YCDPNSVLHBARU" />
-              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-              <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+              <input type="hidden" name="cmd" value="_s-xclick"/>
+              <input type="hidden" name="hosted_button_id" value="YCDPNSVLHBARU"/>
+              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"/>
+              <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1"/>
             </form>
           </div>
           <div class="col-sm-6">
@@ -41,59 +41,58 @@
             </p>
             <p>
               <small>
-
-              Co-Incidence, Inc.
-              <br />
-              C/o Luke Martin
-              <br />
-              134 Highland Ave, Apt 3
-              <br />
-              Somerville, MA 02143
+                Co-Incidence, Inc.
+                <br/>
+                c/o Susanna Bolle
+                <br/>
+                16 Roberts Street
+                <br/>
+                Apt 3
+                <br/>
+                Brookline, MA 02445
               </small>
             </p>
           </div>
- 
-          </div>
-        </div>
-        
-      </div>
-    </div>
-    <br />
-    <div class="row text-center">
-      <h3 class="">
-        with generous support from:
-      </h3>
-      <br />
-    </div>
-    <div class="row text-center">
-
-<!--         <div class="business-logo">
-            <%#= image_tag asset_url("business-logos/Amphion4.png") %>
-        </div> -->
-<!--         <div class="business-logo">
-          <%#= image_tag asset_url("business-logos/bcc.jpg") %>
-        </div> -->
-        
-        <div class="business-logo">
-          <%= image_tag asset_url("business-logos/cafefixe.png") %>
-        </div>
-<!--         <div class="business-logo">
-            <%#= image_tag asset_url("business-logos/austrian-logo.png") %>
-        </div> -->
-<!--         <div class="business-logo">
-          <%#= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
-        </div> -->
-        <div class="business-logo">
-          <%= image_tag asset_url("MCC_Logo.png") %>
-        </div>
-        <div class="business-logo">
-          <%= image_tag asset_url("business-logos/streetcarlogo.png") %>
-        </div>
-        <div class="business-logo">
-          <%= link_to image_tag(asset_url("business-logos/Festivals_Badge.png")), "http://artsboston.org/MassFestivals", :target => "_blank" %>
-            
         </div>
       </div>
     </div>
   </div>
-</div>
+  <br/>
+  <div class="row text-center">
+    <h3 class="">
+      with generous support from:
+    </h3>
+    <br/>
+  </div>
+  <div class="row text-center">
+
+    <!--         <div class="business-logo">
+            <%#= image_tag asset_url("business-logos/Amphion4.png") %>
+        </div> -->
+    <!--         <div class="business-logo">
+          <%#= image_tag asset_url("business-logos/bcc.jpg") %>
+        </div> -->
+
+    <div class="business-logo">
+      <%= image_tag asset_url("business-logos/cafefixe.png") %>
+    </div>
+    <!--         <div class="business-logo">
+            <%#= image_tag asset_url("business-logos/austrian-logo.png") %>
+        </div> -->
+    <!--         <div class="business-logo">
+          <%#= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
+        </div> -->
+    <div class="business-logo">
+      <%= image_tag asset_url("MCC_Logo.png") %>
+    </div>
+    <div class="business-logo">
+      <%= image_tag asset_url("business-logos/streetcarlogo.png") %>
+    </div>
+    <div class="business-logo">
+      <%= link_to image_tag(asset_url("business-logos/Festivals_Badge.png")), "http://artsboston.org/MassFestivals", :target => "_blank" %>
+
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
