my mustachioness knows no temporal bounds

--- a/app/views/fourth_years/new.html.erb
+++ b/app/views/fourth_years/new.html.erb
@@ -14,9 +14,8 @@
       <div class="col-md-10 col-md-offset-1 text-center">
         <p>
           To participate in the festival, <b>please submit a proposal for a piece of art, score, music, paper, or any
-          activity</b> that deals with the above questions or complements them in a meaningful way. We plan on engaging
-          with
-          your proposal during the festival.
+          activity</b> that deals with the <a href="/home/#intro2020">questions</a> we are dealing with or complements
+          them in a meaningful way. We plan on engaging with your proposal during the festival.
         </p>
         <p>
           Your submission can be at any stage of development, but should be ready to put into action or at least grow
@@ -57,6 +56,10 @@
         </p>
         <p>
           As with all years, the festival has an open door for participation: if you’d like to join, please simply come!
+        </p>
+        <br>
+        <p>
+          <i>applications are due october 1st, and results will be sent back by october 9th</i>
         </p>
       </div>
     </div>
