--- a/app/views/home/sections/_application2.html.erb
+++ b/app/views/home/sections/_application2.html.erb
@@ -13,7 +13,9 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <p class="text-faded">
-          Fill out your application here. We are most interested in your project proposal for the festival. Our main advice is: think big, think radical, and be idealistic. Your portfolio functions as supplementary material that will give us a better chance to get to know you as an artist.
+          Fill out your application here. We are most interested in your project proposal for the festival. Our main
+          advice is: think big, think radical, and be idealistic. Your portfolio functions as supplementary material
+          that will give us a better chance to get to know you as an artist.
         </p>
       </div>
       <!-- <div class="col-md-6 text-center">
@@ -29,7 +31,7 @@
         </p>
       </div> -->
     </div>
-    <br />
+    <br/>
     <div class="row">
       <div class="col-md-6">
         <ul>
@@ -62,83 +64,89 @@
               Depart anytime on January 28th, 2018
             </p>
           </li>
-        <ul>
+        </ul>
       </div>
     </div>
   </div>
 
   <div class="container">
     <div class="row text-center">
-      <a class="btn btn-primary btn-fugu" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      <a class="btn btn-primary btn-fugu"
+         data-toggle="collapse"
+         href="#collapseExample"
+         aria-expanded="false"
+         aria-controls="collapseExample"
+      >
         TOGGLE APPLICATION
       </a>
     </div>
   </div>
 
 
-  <div class="container collapse" id="collapseExample"> 
-    <br />
-    <hr />
+  <div class="container collapse" id="collapseExample">
+    <br/>
+    <hr/>
     <div class="row text-center">
       <p>
         * Please note: you cannot save your progress in this form. *
-        <br />
+        <br/>
         * There is a known issue submitting this form on Safari. If possible, please use Chrome. *
       </p>
     </div>
 
 
-    <%= form_for(@coincidentTwo, remote: true, :html => {:class => "form-inline"} ) do |f| %>
+    <%= form_for(@coincidentTwo, remote: true, :html => {:class => "form-inline"}) do |f| %>
       <div class="row">
         <div class="col-md-6">
           <h3>
             Personal Info (Required)
           </h3>
           <p class="text-faded small-text">
-            Please let us know who you are! Our main means of contact will be e-mail, so please check it (and your spam folder) regularly.
+            Please let us know who you are! Our main means of contact will be e-mail, so please check it (and your spam
+            folder) regularly.
           </p>
           <%= f.label :name, class: 'fugu-width' %>
           <%= f.text_field :name, class: 'form-control form2', :required => true %>
-          <br />
+          <br/>
 
           <%= f.label :email, class: 'fugu-width m-5-top' %>
           <%= f.text_field :email, class: 'form-control form2 m-5-top', :required => true %>
         </div>
         <div class="col-md-6">
           <h3>
-            &nbsp;
           </h3>
-
-          <br />
+          <br/>
           <%#= f.label :birthday, :required => true, class: 'fugu-width m-5-top' %>
           <%#= f.date_field :birthday, class: 'form-control form2 m-5-top', :required => true %>
-          <br />
+          <br/>
           <%= f.label :address, :required => true, class: 'fugu-width m-5-top' %>
           <%= f.text_area :address, class: 'form-control form2 m-5-top', :required => true %>
         </div>
       </div>
-      <br />
-      <hr />
+      <br/>
+      <hr/>
       <div class="row">
         <div class="col-md-6">
           <h3>
             Portfolio
           </h3>
           <p class="text-faded small-text">
-            We'd like to get a sense of what you do and what you are interested in. We aren't interested in a CV/Résumé - just let us know what you think we should know about you and your past.
+            We'd like to get a sense of what you do and what you are interested in. We aren't interested in a CV/Résumé
+            - just let us know what you think we should know about you and your past.
           </p>
 
-<!--           <p class="text-faded small-text">
-            Please provide your website if you have it. If you do not, that is okay, it will not negatively affect your application.
-          </p> -->
+          <!--           <p class="text-faded small-text">
+                      Please provide your website if you have it. If you do not, that is okay, it will not negatively affect your application.
+                    </p> -->
           <%= f.label 'Tell us about your past' %>
-          <br />
+          <br/>
           <%= f.text_area :tell_us, class: 'form-control form2 my-text-area' %>
 
-          <br />
-          <br />
+          <br/>
+          <br/>
           <p class="text-faded small-text">
-            Please provide your website if you have it. If you do not, that is okay, it will not negatively affect your application. (Aaron doesn't even have one!)
+            Please provide your website if you have it. If you do not, that is okay, it will not negatively affect your
+            application. (Aaron doesn't even have one!)
           </p>
           <%= f.label 'Website (Optional)' %>
           <%= f.text_field :website, class: 'form-control form2' %>
@@ -150,43 +158,56 @@
             </h3>
           </div>
           <p class="text-faded small-text">
-            You may provide 1 - 3 Work Samples, in whatever form/format best represents you. If you do not have any work samples that you feel are ready to be submitted, please send brief proposals of pieces that reflect your work interests (and make a note of this for us). Please note: we only require 1 Work Sample, and the number of Work Samples you submit will not negatively affect application. 
+            You may provide 1 - 3 Work Samples, in whatever form/format best represents you. If you do not have any work
+            samples that you feel are ready to be submitted, please send brief proposals of pieces that reflect your
+            work interests (and make a note of this for us). Please note: we only require 1 Work Sample, and the number
+            of Work Samples you submit will not negatively affect application.
           </p>
           <p class="text-faded small-text">
-            *All documents should be linked to via resources like Dropbox and Google Drive. Make sure the documents are accessible to us to view.*
+            *All documents should be linked to via resources like Dropbox and Google Drive. Make sure the documents are
+            accessible to us to view.*
           </p>
           <%= f.label :link1, 'Work Sample 1, Link (Required)', class: ' m-5-top', :required => true %>
           <%= f.text_field :link1, class: 'form-control form2', :required => true %>
-          <br />
-          <%= f.label :link2, 'Work Sample 2, Link (Optional)', class: ' m-5-top'  %>
+          <br/>
+          <%= f.label :link2, 'Work Sample 2, Link (Optional)', class: ' m-5-top' %>
           <%= f.text_field :link2, class: 'form-control form2 m-5-top' %>
-          <br />
-          <%= f.label :link3, 'Work Sample 3, Link (Optional)', class: ' m-5-top'  %>
+          <br/>
+          <%= f.label :link3, 'Work Sample 3, Link (Optional)', class: ' m-5-top' %>
           <%= f.text_field :link3, class: 'form-control form2 m-5-top' %>
-          <br />
+          <br/>
 
         </div>
       </div>
-      <br />
-      <hr />
+      <br/>
+      <hr/>
       <div class="row">
         <div class="col-md-6">
           <h3>
             Proposal
           </h3>
           <p class="text-faded small-text">
-            In lieu of any specific 'project proposal', we would like to ask for a short written response to the following prompt. This will, we hope, give you a clearer sense of the concepts we'll be working with (and expanding from) at co-incidence, while also allowing us to see how they may fit into your practice.
+            In lieu of any specific 'project proposal', we would like to ask for a short written response to the
+            following prompt. This will, we hope, give you a clearer sense of the concepts we'll be working with (and
+            expanding from) at co-incidence, while also allowing us to see how they may fit into your practice.
 
           </p>
           <p class="text-faded small-text">
-            Please write a response to any the below concepts. Consider how they relate to your work and what you may bring / develop / discuss / perform at the Festival. Your response may take any form that you feel is appropriate: a score, a draft of a score, a poem, a short essay, a stream-of-consciousness response, a partial piece to-be-developed/realized, etc. It can be as long as you'd like, but please consider keeping it somewhat short (perhaps 1-2 pages, loosely). As a further means of contextualizing the prompt, we have prepared some brief remarks on each concept:
+            Please write a response to any the below concepts. Consider how they relate to your work and what you may
+            bring / develop / discuss / perform at the Festival. Your response may take any form that you feel is
+            appropriate: a score, a draft of a score, a poem, a short essay, a stream-of-consciousness response, a
+            partial piece to-be-developed/realized, etc. It can be as long as you'd like, but please consider keeping it
+            somewhat short (perhaps 1-2 pages, loosely). As a further means of contextualizing the prompt, we have
+            prepared some brief remarks on each concept:
           </p>
           <p class="text-faded small-text">
-              - the bridge :: a unit of basic linkage. two sides. a relationship formed, worked on, built together.
-              <br />
-              - the swarm :: a link between living entities forming something like a moving body. a flock. a certain awareness of and responsiveness to energy within the group.
-              <br />
-              - social sculpture :: the idea of consciousness creating a field in which linking, bridging, and swarming processes are possible. an ideal state of sorts. a vibrancy and absence of ego.
+            - the bridge :: a unit of basic linkage. two sides. a relationship formed, worked on, built together.
+            <br/>
+            - the swarm :: a link between living entities forming something like a moving body. a flock. a certain
+            awareness of and responsiveness to energy within the group.
+            <br/>
+            - social sculpture :: the idea of consciousness creating a field in which linking, bridging, and swarming
+            processes are possible. an ideal state of sorts. a vibrancy and absence of ego.
           </p>
         </div>
         <div class="col-md-6">
@@ -196,20 +217,21 @@
 
           <%= f.label 'Link to your response to the prompt', :required => true, class: ' m-5-top' %>
           <%= f.text_field :link_to_prompt, class: 'form-control form2', :required => true %>
-          <br />
-          <br />
+          <br/>
+          <br/>
           <p class="text-faded small-text">
-            The majority of this festival is sound-based. Of course, you do not need an instrument to make (or observe/make) sound. 
+            The majority of this festival is sound-based. Of course, you do not need an instrument to make (or
+            observe/make) sound.
           </p>
           <%= f.label 'Instrument(s) that you are willing to play', :required => true %>
           <%= f.text_field :instruments, class: 'form-control form2', :required => true %>
-          <br />
-          <br />
+          <br/>
+          <br/>
           <%= f.label 'Where did you hear about us?', :required => true, class: ' m-5-top' %>
           <%= f.text_field :how_did_you_hear, class: 'form-control form2 m-5-top', :required => true %>
 
-          <br />
-          <br />
+          <br/>
+          <br/>
           <%= f.submit 'SUBMIT APPLICATION', class: 'btn btn-secondary btn-fugu' %>
         </div>
       </div>
