--- a/app/views/home/sections/_intro2020.html.erb
+++ b/app/views/home/sections/_intro2020.html.erb
@@ -50,13 +50,19 @@
         <p>
           We invite those interested to join us in this attempt to think, act, do, critique, and be together.
         </p>
+        <p><a class="" href="/faq-2020">more info can be found here</a></p>
         <br/>
         <br/>
         <hr class="tertiary">
+        <br>
         <h4><a class="" href="/application">Please apply here</a></h4>
         <br>
-        <p><a class="" href="/faq-2020">more info can be found here</a></p>
+        <p>
+          applications due october 1st || results sent by october 9th
+        </p>
+        <br>
         <hr class="tertiary">
+
       </div>
     </div>
   </div>
