--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -172,7 +172,7 @@ h5 {
   width: 100% !important;
 }
 
-.eventUl, .faq-ul {
+.eventUl, .faq-ul, .nope-ul {
   list-style: none;
   padding: 0;
   margin: 0;
