--- a/app/views/fourth_years/new.html.erb
+++ b/app/views/fourth_years/new.html.erb
@@ -61,6 +61,31 @@
         <p>
           <i>applications are due october 1st, and results will be sent back by october 9th</i>
         </p>
+        <br>
+        <p>
+          are some materials on Holloway's work that may prove helpful
+        </p>
+        <ul class="nope-ul">
+          <li>
+            <a href="https://www.youtube.com/watch?v=P-4DTLGNp4A" target="_blank">
+              Hope and the concept of capital. - video lecture by John Holloway
+            </a>
+          </li>
+          <li>
+            <a href="http://upsidedownworld.org/archives/international/against-and-beyond-the-state-an-interview-with-john-holloway/"
+               target="_blank"
+            >
+              Against and Beyond the State: An Interview with John Holloway
+            </a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/open?id=1VSx7RB7--lTKBHG1CVzo56e7-XXzJVxg"
+              target="_blank"
+            >
+              Excepts from 'Crack Capitalism' & 'How To Change The World Without Taking Power'
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
