--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,9 +16,9 @@
 <!--         <li>
           <a class="page-scroll" href="#about">About</a>
         </li> -->
-        <li>
-          <a class="" href="/application">APPLICATION</a>
-        </li>
+<!--        <li>-->
+<!--          <a class="" href="/application">APPLICATION</a>-->
+<!--        </li>-->
         <li>
             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Past Seasons
