Adds 2020 page & section to the main page

--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -358,5 +358,8 @@ textarea.form-control {
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   background: #e7e7e7;
+}
 
+.black {
+  color: black !important;
 }
