Makes some pics show up

--- a/app/views/home/sections/_guest_artists_2020.html.erb
+++ b/app/views/home/sections/_guest_artists_2020.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-faded">
-          ARTISTS
+          GUEST ARTISTS
         </h2>
       </div>
     </div>
@@ -12,7 +12,7 @@
   <br/>
   <div class="container guest-artists">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
-        imageUrl: "2020/RobertBlatt-Antwerpen2019-square.jpeg",
+        imageUrl: "2020/RobertBlatt-Antwerpen2019-square.jpg",
         name: "Robert Blatt",
         website: "http://robertblatt.ricercata.org/",
         description: "Robert Blatt (b. 1984 in Anaheim, CA) creates work rooted in explorations of expanded sonic situations through varying frames and gradations of environment, notation, object, performance, text and tone. The notion of a site-responsive practice and scores in their exhaustive sense make a regular appearance in his work, often dissolving aspects of language, location, material and presence as vehicles for an unspecified or autonomous encounter with the ambiguities of the work itself. His work has been presented in the context of performances, exhibitions, readings, publications and a variety of hard-to-pin-down occurrences and has been supported through a fellowship from Akademie Schloss Solitude (DE) and residencies from Initiative for Digital Exploration of Arts and Sciences (CA), Jack Straw Cultural Center (WA) and GEMAK (NL). He co-founded/directed the Miami-based Inlets Foundation for Experimental Practices and the international experimental music/performance art collective Acid Police Noise Ensemble."
@@ -75,7 +75,7 @@
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
-        imageUrl: "2020/ryan",
+        imageUrl: "2020/ryan.png",
         name: "Ryan Seward",
         website: "https://ryansewardmusic.com/",
         description: "Ryan Seward is a percussionist and composer based in Loveland, Colorado. His improvisational work centers around approaching the drum as a site of resonance and employing various techniques and preparations to achieve an extensive timbral palette. He also works with found objects, zither, contact mics, analog electronics, and field recordings. In addition, he is an interpreter of experimental works for and with percussion. As a composer, his practice is rooted in a concern for deep listening, communitarian ritual, and the subjective psychological engagements with the unique characteristics and qualities of our physical, social, and sonic environments."
