adds gubs from grace & cherlyn

--- a/app/views/home/sections/_guest_artists_2020.html.erb
+++ b/app/views/home/sections/_guest_artists_2020.html.erb
@@ -19,10 +19,10 @@
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
-        imageUrl: "2020/blue-box.png",
+        imageUrl: "2020/Carney_Co-IncidencePhoto.jpg",
         name: "Grace Carney",
         website: nil,
-        description: "I am currently based in Hanover, NH, where I am pursuing my Masters in Digital Musics at Dartmouth. My work exists somewhere between composition, sound and performance art."
+        description: "Grace Carney is figuring things out—in practical, material, and sonic worlds. She is an artist interested in performance, sound, queerness, power, and the spaces that can be created within these categories. A third generation Irish-Catholic Bostonian, she can currently be found in Hanover, New Hampshire working and performing with material objects while pursuing her Masters in Dartmouth’s Digital Musics program."
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
@@ -40,10 +40,10 @@
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
-        imageUrl: "2020/cherlyn.png",
+        imageUrl: "2020/IMG_4908.JPG",
         name: "Cherlyn Hsing-Hsin Liu",
         website: "https://cherlynhsinghsinliu.com/",
-        description: "Cherlyn Hsing-Hsin Liu is a Taiwanese born multidisciplinary artist who received her BFA and MFA in Film/Video at California Institute of the Arts. She comes from a background in literature and photography, and has developed her interests and practices in experimental arts, including 8mm/16mm/35mm film, mixed media, sound, audiovisual performance and installation. Exploring media languages and experimenting with materials and techniques, her works often are attempts to transcribe life events, self-reflection, and indexical experiences."
+        description: "Cherlyn Hsing-Hsin Liu is a Taiwanese born multidisciplinary artist.  She comes from a background in literature and photography, and has developed her interests and practices in experimental arts, including 8mm/16mm/35mm film, mixed media, sound, audiovisual performance and installation. Exploring media languages and experimenting with materials and techniques, her works often are attempts to transcribe life events, self-reflection, and indexical experiences."
     } %>
     <hr class="secondary">
     <%#= render partial: 'home/sections/guest_artist_description', :locals => {
