sarah & michael bios/pics

--- a/app/views/home/sections/_guest_artists_2020.html.erb
+++ b/app/views/home/sections/_guest_artists_2020.html.erb
@@ -54,17 +54,19 @@
     } %>
 <!--    <hr class="secondary">-->
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
-        imageUrl: "MPisaro.jpg",
+        imageUrl: "2020/michael_pisaro.png",
         name: "Michael Pisaro",
         website: "https://www.wandelweiser.de/michael-pisaro.html",
-        description: "Born in Buffalo in 1961, Michael Pisaro is a composer and guitarist, a member of the Wandelweiser Composers Ensemble and founder and director of the Experimental Music Workshop, Calarts. His work is frequently performed in the U.S. and in Europe, in music festivals and in many smaller venues. Most of his music of the last several years is published by Edition Wandelweiser (Germany)."
+        description: "Michael Pisaro (born 1961 in Buffalo, New York) is a guitarist and composer and a member of the Wandelweiser collective. While, like other members of Wandelweiser, Pisaro is known for pieces of long duration with periods of silence, in the past fifteen years his work has branched out in many directions, including work with field recording, electronics, improvisation and large ensembles of very different kinds of instrumental constitution.
+          Pisaro has a long-standing collaboration with percussionist Greg Stuart, with over thirty collaborations (pieces and recordings) to date, including their 3-disc set, Continuum Unbound from 2014 and a new piece for amplified percussion and orchestra (to be premiered by the La Jolla Symphony in February, 2020). Recordings of his work have been released by Edition Wandelweiser Records, erstwhile records, New World Records, Hubro, Potlatch, another timbre, meena/ftarri, Senufo Editions, Intonema, winds measure, HEM Berlin and on Pisaro's own imprint, Gravity Wave.
+          Pisaro teaches composition and experimental music the California Institute of the Arts."
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
-        imageUrl: "2020/sarah-square.png",
+        imageUrl: "2020/IMG_7985.jpg",
         name: "Sarah Pitan",
         website: nil,
-        description: "Pitan is from Boston, now in LA and is interested in score-making and the construction of flat objects."
+        description: "Hi, my name is Sarah. I make scores for things, mainly music. My practice used to be heavily influenced by contemporary philosophy, but it is now more influenced by my work in retail/customer service. I was born and raised just outside of Boston, and currently live in LA."
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
