add in the unlimited present agency

--- a/app/views/home/sections/_guest_artists_2020.html.erb
+++ b/app/views/home/sections/_guest_artists_2020.html.erb
@@ -89,5 +89,12 @@
         website: "http://manfred-werder.blogspot.com/",
         description: "Composer and performer, is wandering through the abundance. His scores feature words and sentences found in poetry, philosophy and the world. Earlier works include stück 1998, a 4000 page score whose nonrecurring and intermittent performative realization has been ongoing since December 1997. Lives in situ. "
     } %>
+    <hr class="secondary">
+    <%= render partial: 'home/sections/guest_artist_description', :locals => {
+        imageUrl: "2020/blue curtains.png",
+        name: "the unlimited present agency",
+        website: nil,
+        description: "The unlimited present agency is an amorphous collective moved by thoughts, affects and beliefs. Its practice emerges from an engagement with notions of futurity, circulation and resistance. The agency is autonomous from the members and events that constitutes it, but for the time being, Elizabeth Roger and Grégoire Lamontagne are some of its more human faces."
+    } %>
   </div>
 </section>
