Updates ryan's image and whatnot

--- a/app/views/home/sections/_guest_artists_2020.html.erb
+++ b/app/views/home/sections/_guest_artists_2020.html.erb
@@ -77,10 +77,10 @@
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
-        imageUrl: "2020/ryan.png",
+        imageUrl: "2020/Ryan-Seward.jpg",
         name: "Ryan Seward",
         website: "https://ryansewardmusic.com/",
-        description: "Ryan Seward is a percussionist and composer based in Loveland, Colorado. His improvisational work centers around approaching the drum as a site of resonance and employing various techniques and preparations to achieve an extensive timbral palette. He also works with found objects, zither, contact mics, analog electronics, and field recordings. In addition, he is an interpreter of experimental works for and with percussion. As a composer, his practice is rooted in a concern for deep listening, communitarian ritual, and the subjective psychological engagements with the unique characteristics and qualities of our physical, social, and sonic environments."
+        description: "Ryan Seward is a percussionist and composer based in Loveland, Colorado. His practice is rooted in concerns for communitarian ritual, group dynamics, place identity, infinitesimal perceptual phenomena, and performance, improvisation, and composition as sites of political and social praxis."
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
