Adds logo for manfreds support

--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -90,7 +90,9 @@
     </div>
     <div class="business-logo">
       <%= link_to image_tag(asset_url("business-logos/Festivals_Badge.png")), "http://artsboston.org/MassFestivals", :target => "_blank" %>
-
+    </div>
+    <div class="business-logo">
+      <%= image_tag asset_url("business-logos/PH_logo_byline_EN_black.jpg") %>
     </div>
   </div>
 </section>
