--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -63,6 +63,9 @@
       with generous support from:
     </h3>
     <br/>
+    <h5>
+      This program is supported in part by a grant from the Mayor’s Office of Arts and Culture and the City of Boston.
+    </h5>
   </div>
   <div class="row text-center">
 
