--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -5,6 +5,14 @@
         <h2 class="section-heading">
           2020 Schedule
         </h2>
+        <br>
+        <p>
+          everything is free and open to anyone who wants to participate / view / engage.
+        </p>
+        <p>
+          please feel free to <a href="mailto:coincidence.festival@gmail.com">email us</a> if you have questions.
+
+        </p>
         <hr class="primary">
       </div>
     </div>
@@ -18,7 +26,8 @@
           time: '10am - 11am',
           title1: 'Welcome Concert',
           title2: '(pieces by Pitan, Gottschalk, Bullock, Eckl, and Pisaro)',
-          is_concert: true
+          is_concert: true,
+          concert_link: "https://www.facebook.com/events/1283662845139141/"
       } %>
     </div>
     <hr>
@@ -50,7 +59,8 @@
       <%= render partial: 'home/activity_deats', :locals => {
           time: '8pm - 930pm',
           title1: 'Michael Pisaro/Cherlyn Liu Concert',
-          is_concert: true
+          is_concert: true,
+          concert_link: "https://www.facebook.com/events/594177368005443/"
       } %>
     </div>
     <hr>
@@ -141,7 +151,8 @@
       <%= render partial: 'home/activity_deats', :locals => {
           time: '7pm - 830pm',
           title1: 'Manfred Werder Concert',
-          is_concert: true
+          is_concert: true,
+          concert_link: "https://www.facebook.com/events/1265835153624891/"
       } %>
     </div>
     <hr>
@@ -181,7 +192,8 @@
       <%= render partial: 'home/activity_deats', :locals => {
           time: '7pm - 830pm',
           title1: 'Robert Blatt Open Talk/Workshop/Concert',
-          is_concert: true
+          is_concert: true,
+          concert_link: "https://www.facebook.com/events/2484068061849278/"
       } %>
     </div>
     <hr>
@@ -200,8 +212,7 @@
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '- 2pm',
-          title1: 'Lunch',
-          is_concert: true
+          title1: 'Lunch'
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '3pm - 430am',
@@ -210,7 +221,8 @@
       <%= render partial: 'home/activity_deats', :locals => {
           time: '6pm -9pm',
           title1: 'Finale Concert/Event/Continuation of Ongoing Performances',
-          is_concert: true
+          is_concert: true,
+          concert_link: "https://www.facebook.com/events/410142249710176"
       } %>
     </div>
   </div>
